# Polynomial_Lib

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: ci.yml
benchmarks/: bench_poly.py
cpp/: bindings.cpp  polynomial.cpp  polynomial.h
cpp/tests/: test_polynomial.cpp
example/: test_run.py
src/: __init__.py  polynomial.py
src/polylib/: __init__.py  polynomial.py
tests/: test_polylib.py  test_polynomial.py
