[build-system]
requires = ["setuptools>=68", "wheel", "pybind11; platform_system!='Windows'"]
build-backend = "setuptools.build_meta"

[project]
name = "polylib"
version = "0.1.0"
description = "High-performance polynomial operations with C++ core and Python API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "AI_HW", email = "ai-hw@example.com" }]
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
polylib = ["lib/*"]
